# syezw

./: .gitignore  readme  report.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/syezw/: ExampleInstrumentedTest.kt
app/src/androidTest/java/org/syezw/data/: GpsLocationDaoTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/syezw/: AppDestinations.kt  DiaryScreen.kt  MainActivity.kt  OurLove.kt  PhotoScreen.kt  SettingsManager.kt  SettingsScreen.kt  TODOScreen.kt  Task.kt  TodoViewModel.kt  Utils.kt
app/src/main/java/org/syezw/data/: AppDatabase.kt  Converters.kt  Diary.kt  DiaryDao.kt  DiaryDatabase.kt  GpsLocation.kt  GpsLocationDao.kt  ImportModels.kt  PeriodDao.kt  TodoTask.kt  TodoTaskDao.kt  TodoTaskDatabase.kt
app/src/main/java/org/syezw/model/: DiaryViewModel.kt  DiaryViewModelFactory.kt  GpsPrefKeys.kt  PeriodViewModel.kt  SettingsViewModel.kt  TodoViewModel.kt  TodoViewModelFactory.kt  TradeRecordSettings.kt
app/src/main/java/org/syezw/preference/: SettingsManager.kt
app/src/main/java/org/syezw/screen/: DiaryScreen.kt  OurLove.kt  SettingsScreen.kt  (+4 more)
app/src/main/res/drawable/: ic_content_copy.xml  ic_help_outline.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/org/syezw/: ExampleUnitTest.kt
backend/: .env.example  Cargo.toml  readme
backend/sql/: schema.sql
backend/src/: db.rs  lib.rs  main.rs  models.rs
backend/tests/: sync_tests.rs
docs/: system_overview.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: gps_plot.py
(+21 files in other folders)
